--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -9,60 +9,61 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Google+Sans+Code:ital@0;1&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
 </head>
 
 <body>
-    <h1 class="main-title">Emmitt K. Luhning</h1>
-    <h2 class="sub-title">Professional and Unprofessional Computer Programmer</h2>
+    <h1 class="main-title">Class Emmitt K. Luhning()</h1>
+    <h2 class="sub-title">this.description = Professional and Unprofessional Computer Programmer</h2>
     <div id="home-container">
         <div class="list-container">
             <details>
                 <summary>
                     <p class="list-item">
-                            Project Links
+                            get_project_links()
                     </p>
                 </summary>
                 <div class="sub-list-1">
-                    <p class="list-item">Graph Traversal Visualizer</p>
+                    <p class="list-item">return "Graph Traversal Visualizer"</p>
                     <p class="list-item">
                         <a class="link" href="https://github.com/Em-kale/carleton-mail-delivery-robot" target="_blank">
-                            Autonomous Mail Delivery
+                            return "Autonomous Mail Delivery"
                         </a>
                     </p>
                     <p class="list-item">
                         <a class="link" href="https://github.com/Em-kale/proof" target="_blank">
-                            Proof
+                            return "Proof"
                         </a>
                     </p>
                     <p class="list-item">
                         <a class="link" href="https://github.com/Em-kale/graph-validator-generator" target="_blank">
-                            Near Staking Web Crawler 
+                            return "Near Staking Web Crawler"
                         </a>
                     </p>
-                    <p class="list-item">This site</p>
+                    <p class="list-item">return "This Site"</p>
                 </div>
             </details>
             <details>
                 <summary>
                     <p class="list-item">
-                        Socials 
+                        get_socials()
                     </p>
                 </summary>
                 <div class="sub-list-1">
                     <p class="list-item">
                         <a class="link" href="https://github.com/Em-kale" target="_blank">
-                            Github
+                            return "Github"
                         </a>
                     </p>
                     <p class="list-item">
                         <a class="link" href="https://www.linkedin.com/in/emmittl" target="_blank">
-                            Linkedin
+                            return "Linkedin"
                         </a>
                     </p>
                 </div>
             </details>
             <p class="list-item" hx-target="#home-container" hx-post="/about-me" hx-swap="innerHTML settle:1s">
-                    About Me 
+                    get_about() 
             </p>
          <!--       <p class="list-item">
                    Blog 
