--- a/core/static/about-styles.css
+++ b/core/static/about-styles.css
@@ -1,16 +1,18 @@
 .about-me-container {
+    scrollbar-width: thin;
     width: 90vw;
     height: 75vh;
     margin: auto;
-    margin-top: 6vh;
+    margin-top: 3vh;
     box-shadow: 0 6px 6px rgba(0, 0, 0, 0.2);
-    border-radius: 10px;
+    border-radius: 6px;
     opacity: 1;
     transition: opacity 1s ease-out;
     overflow-y: auto;
     border-style: solid;
     border-color: #27a1b9;
-    scrollbar-width: thin;
+    scrollbar-color: #1a1b26 #27a1b9;
+
 }
 
 .about-me-title {
@@ -24,25 +26,49 @@
 }
 
 .about-me-content {
-    padding: 18px;
     font-size: 1.3vw;
     font-style: normal;
     margin: 0;
-    color: #9ece6a;
+    color: #c0caf5;
     font-family: "Google Sans Code", monospace;
     font-optical-sizing: auto;
     font-weight: 400;
     font-style: normal;
 }
 
+.grid-container {
+    display: grid;
+    grid-template-columns: 33% 30% 30%;
+    padding: 30px;
+    margin: 30px;
+    margin-top: 5px;
+    padding-top: 5px;
+    column-gap: 30px;
+    row-gap: 20px;
+}
+
+h4 {
+    color: #bb9af7;
+    font-family: 'Google Sans Code', 'Courier New', monospace;
+    font-optical-sizing: auto;
+    font-weight: 500;
+    font-style: normal;
+    font-size: 1.5vw;
+}
+
 .headshot {
-    height: 30%;
-    width: 25%;
-    margin-right: 20px;
+    height: 40vh;
+    padding: 5px;
+    width: 40vh;
+    margin-right: 50px;
     margin-left: 5px;
     margin-bottom: 5px;
     float: left;
     border-radius: 50%;
+}
+
+.biography {
+    grid-column: span 3;
 }
 
 .crumb:hover {
