--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -3,47 +3,49 @@
 
 <head>
     <title>L.dev</title>
-    <link rel="stylesheet" type="text/css" href="/static/styles.css" >
-    <link rel="stylesheet" type="text/css" href="/static/about-styles.css" >
+    <link rel="stylesheet" type="text/css" href="/static/styles.css">
+    <link rel="stylesheet" type="text/css" href="/static/about-styles.css">
     <script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.6/dist/htmx.min.js"></script>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Google+Sans+Code:ital@0;1&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Google+Sans+Code:ital,wght@0,300..800;1,300..800&display=swap"
+        rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Google+Sans+Code:ital@0;1&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
+        rel="stylesheet">
 </head>
 
 <body>
-        <h1 class="main-title">
-            <span class="magenta">class</span>
-            <span class="light-blue">Emmitt_K_Luhning</span><span class="bracket">()</span>
-        </h1>
-        <div class="function-div">
-                <p class="list-item">
-                    <span class="function-definition">def __init__</span><span class="bracket">(</span><span class="self">self<span class="bracket">):</span>
-                </p>
-                <div class="sub-list-1">
-                <p class="list-item">
-                    <span class="self">self</span><span class="class-attribute">.description</span>
-                    <span class="operator">=</span> 
-                    <span class="string">"Professional and Unprofessional Computer Programmer"</span></p>
-                </div>
+    <h1 class="main-title">
+        <span class="magenta">class</span>
+        <span class="light-blue">Emmitt_K_Luhning</span><span class="bracket">()</span>
+    </h1>
+    <div class="function-div">
+        <p class="list-item">
+            <span class="function-definition">def __init__</span><span class="bracket">(</span><span
+                class="self">self<span class="bracket">):</span>
+        </p>
+        <div class="sub-list-1">
+            <p class="list-item">
+                <span class="self">self</span><span class="class-attribute">.description</span>
+                <span class="operator">=</span>
+                <span class="string">"Professional and Unprofessional Computer Programmer"</span>
+            </p>
         </div>
+    </div>
     <div id="home-container">
         <div class="list-container">
             <div class="function-div">
-            <details>
-                <summary>
-                    <p class="list-item"><span class="comment"># links to my personal projects</span></p>
-                    <p class="list-item">
-                            <span class="function-definition">def</span>
-                            <span class="function-name">get_project_links</span><span class="bracket">():</span> 
-                    </p>
-                </summary>
+                <p class="list-item"><span class="comment"># links to my personal projects</span></p>
+                <p class="list-item">
+                    <span class="function-definition">def</span>
+                    <span class="function-name">get_project_links</span><span class="bracket">():</span>
+                </p>
                 <div class="sub-list-1">
-                        <!--<p class="list-item">return "Graph Traversal Visualizer"</p> -->
+                    <!--<p class="list-item">return "Graph Traversal Visualizer"</p> -->
                     <p class="list-item">
                         <a class="link" href="https://github.com/Em-kale/carleton-mail-delivery-robot" target="_blank">
-                                <span class="return">return</span><span class="string"> "Autonomous Mail Delivery"</span>
+                            <span class="return">return</span><span class="string"> "Autonomous Mail Delivery"</span>
                         </a>
                     </p>
                     <p class="list-item">
@@ -53,24 +55,20 @@
                     </p>
                     <p class="list-item">
                         <a class="link" href="https://github.com/Em-kale/graph-validator-generator" target="_blank">
-                            <span class="return">return</span><span class="string"> 
+                            <span class="return">return</span><span class="string">
                                 "Near Staking Web Crawler"
                             </span>
                         </a>
                     </p>
                     <p class="list-item"><span class="return">return</span> <span class="string">"This Site"</span></p>
                 </div>
-            </details>
             </div>
             <div class="function-div">
-            <details>
-                <summary>
-                    <p class="list-item"><span class="comment"># check out my 'social media'</span></p>
-                    <p class="list-item">
-                        <span class="function-definition">def</span>
-                        <span class="function-name">get_socials</span><span class="bracket">():</span>
-                    </p>
-                </summary>
+                <p class="list-item"><span class="comment"># check out my 'social media'</span></p>
+                <p class="list-item">
+                    <span class="function-definition">def</span>
+                    <span class="function-name">get_socials</span><span class="bracket">():</span>
+                </p>
                 <div class="sub-list-1">
                     <p class="list-item">
                         <a class="link" href="https://github.com/Em-kale" target="_blank">
@@ -83,20 +81,19 @@
                         </a>
                     </p>
                 </div>
-            </details>
             </div>
             <div class="function-div">
-            <p class="list-item"><span class="comment"># read more about me</span></p>
-            <p class="list-item" hx-target="#home-container" hx-post="/about-me" hx-swap="innerHTML settle:1s">
+                <p class="list-item"><span class="comment"># read more about me</span></p>
+                <p class="list-item" hx-target="#home-container" hx-post="/about-me" hx-swap="innerHTML settle:1s">
                     <span class="function-definition">def</span>
                     <span class="function-name">get_about</span><span class="bracket">():</span>
-            </p>
-         <!--       <p class="list-item">
+                </p>
+                <!--       <p class="list-item">
                    Blog 
     </p> -->
-                </div>
-            </div> 
+            </div>
         </div>
+    </div>
 </body>
 
 </html>
