--- a/core/templates/graphs/graphs.html
+++ b/core/templates/graphs/graphs.html
@@ -2,14 +2,24 @@
 <html lang='en'>
 
 <head>
-    <title>L.dev</title>
-    <link rel="stylesheet" type="text/css" href="/static//graphs/graphs.css">
-    <script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.6/dist/htmx.min.js"></script>
+  <title>L.dev</title>
+  <link rel="stylesheet" type="text/css" href="/static/styles/graphs/graphs.css">
+  <script src="https://cdn.jsdelivr.net/npm/htmx.org@2.0.6/dist/htmx.min.js"></script>
+  <script type="importmap">
+    {
+      "imports": {
+        "three": "https://cdn.jsdelivr.net/npm/three@0.160.0/build/three.module.js",
+        "three/addons/": "https://cdn.jsdelivr.net/npm/three@0.160.0/examples/jsm/"
+      }
+    }
+    </script>
 </head>
 
 <body>
-    <h1>Graph Visualizer</h1>
-    <button>Generate graph</button>
+  <div class="threejs-container" id="threejs-container">
+  </div>
+  <script type="module" src="/static/scripts/graphs.js">
+  </script>
 </body>
 
 
