--- a/core/static/styles/graphs/graphs.css
+++ b/core/static/styles/graphs/graphs.css
@@ -1,8 +1,46 @@
 body {
-    overflow: hidden;
     background: black;
+    height: 100vh;
+    width: 100vw;
+    overflow: hidden;
 }
 
-.threejs-container {
-    overflow: hidden
+h1 {
+    color: white;
+}
+
+label {
+    color: white;
+}
+
+.label-descriptor {
+    color: white;
+}
+
+button {
+    margin-top: 20px
+}
+
+input[type='range'] {
+    background: transparent;
+    width: 80%;
+    /* Adjust as needed */
+    cursor: pointer;
+}
+
+.grid-container {
+    width: 100%;
+    height: 100%;
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+    padding: 5px;
+    margin: 20px;
+}
+
+.grid-cell {
+    grid-column: span 1;
+}
+
+#threejs-container {
+    height: 75vh;
 }
