--- a/core/templates/graphs/graphs.html
+++ b/core/templates/graphs/graphs.html
@@ -16,7 +16,18 @@
 </head>
 
 <body>
-  <div class="threejs-container" id="threejs-container">
+  <div class="grid-container">
+    <div class="grid-cell">
+      <h1> Graph Visualizer </h1>
+      <label class="label"> Number of Nodes </label>
+      <div class="slider-container">
+        <span class="label-descriptor">0</span><input class="slider" type="range" id="node-number" min="1" max="100"
+          steps="5"></input><span class="label-descriptor">100</span>
+      </div>
+      <button>Generate</button>
+    </div>
+    <div class="grid-cell" id="threejs-container">
+    </div>
   </div>
   <script type="module" src="/static/scripts/graphs.js">
   </script>
