--- a/core/static/styles/graphs/graphs.css
+++ b/core/static/styles/graphs/graphs.css
@@ -1,16 +1,31 @@
 body {
     background: black;
-    height: 100vh;
-    width: 100vw;
-    overflow: hidden;
+    height: 90vh;
+    width: 90vw;
+    overflow: auto;
 }
 
 h1 {
     color: white;
+    margin-left: 2vw;
+    font-family: "Saira";
+    font-weight: 400;
+    font-style: normal;
+}
+
+p {
+    font-family: "Saira";
+    color: white;
+    font-weight: 300;
+    font-style: normal;
+    margin-top: 10px
 }
 
 label {
     color: white;
+    font-family: "Saira";
+    font-weight: 300;
+    font-style: normal;
 }
 
 .slider-container {
@@ -33,18 +48,73 @@ input[type='range'] {
 }
 
 .grid-container {
-    width: 100%;
-    height: 100%;
+    width: 99vw;
+    height: 70vh;
     display: grid;
     grid-template-columns: 1fr 2fr;
-    padding: 5px;
-    margin: 20px;
 }
 
 .grid-cell {
+    padding: 20px;
     grid-column: span 1;
 }
 
-#threejs-container {
-    height: 75vh;
+
+/* Hide default HTML checkbox */
+.switch input {
+    opacity: 0;
+    width: 0;
+    height: 0;
+}
+
+.tip {
+    text-align: center
+}
+
+/* The slider */
+.dimension-slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+    border-radius: 34px;
+}
+
+.dimension-slider:before {
+    position: absolute;
+    content: "";
+    height: 16px;
+    width: 16px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+    border-radius: 50%;
+}
+
+input:checked+.dimension-slider {
+    background-color: #2196F3;
+}
+
+input:focus+.dimension-slider {
+    box-shadow: 0 0 1px #2196F3;
+}
+
+input:checked+.dimension-slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+}
+
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 50px;
+    height: 24px;
 }
