--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -13,6 +13,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Google+Sans+Code:ital@0;1&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
+    <link rel="preload" href="/static/images/headshot.jpg" as="image" />
+    <link rel="preload" href="/static/scripts/graph.js" as="script" />
 </head>
 
 <body>
