preload graph script

--- a/core/templates/index.html
+++ b/core/templates/index.html
@@ -14,7 +14,7 @@
         href="https://fonts.googleapis.com/css2?family=Google+Sans+Code:ital@0;1&family=Roboto:ital,wght@0,100..900;1,100..900&display=swap"
         rel="stylesheet">
     <link rel="preload" href="/static/images/headshot.jpg" as="image" />
-    <link rel="preload" href="/static/scripts/graph.js" as="script" />
+    <link rel="preload" href="/static/scripts/graphs.js" as="script" />
 </head>
 
 <body>
