--- a/core/static/styles/graphs/graphs.css
+++ b/core/static/styles/graphs/graphs.css
@@ -11,6 +11,17 @@ h1 {
     font-family: "Saira";
     font-weight: 400;
     font-style: normal;
+    margin-bottom: 0;
+}
+
+h2 {
+    color: white;
+    margin-left: 2vw;
+    margin-top: 0;
+    font-family: "Saira";
+    font-weight: 300;
+    font-size: 14px;
+    font-style: normal;
 }
 
 p {
