--- a/core/templates/graphs/graphs.html
+++ b/core/templates/graphs/graphs.html
@@ -22,6 +22,7 @@
 
 <body>
   <h1> Graph Visualizer </h1>
+  <h2> (under construction) </h2>
   <div class="grid-container">
     <div class="grid-cell">
       <div class="slider-container">
